tests/tooling/fixtures/native/recovery/negative/negative_do_while_parser_missing_while_keyword.objc3
// Expected diagnostic code(s): O3P100.
module NegativeDoWhileParserMissingWhileKeyword;

fn main() -> i32 {
  do {
    let i = 1;
  } (1 < 2);
  return 0;
}

